Fixed horizontal overflow on Home page

--- a/src/pages/Home/Home.styles.css
+++ b/src/pages/Home/Home.styles.css
@@ -1,7 +1,7 @@
 .homepage {
   text-align: center;
   overflow-x: hidden;
-  padding-top: 80px;
+  padding-top: 50px;
   padding-bottom: 80px;
   display: flex;
   justify-content: center;
